--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
     <meta property="og:title" content="Medical Admission Batch 22" />
     <meta property="og:site_name" content="Medical Admission Batch 22" />
     <meta property="og:description" content="Medical Admission Batch 22" />
-    <meta
-      property="og:image"
-      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
-    />
+    <meta property="og:image" content="https://images.prothomalo.com/prothomalo-bangla%2F2021-03%2Fa050d269-5432-47f9-b0ef-a3f8965cf5c7%2Fmedical.jpg?auto=format%2Ccompress&format=webp&w=376&dpr=2.6" />
+
     <meta
       property="og:image:secure_url"
-      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
+      content="https://images.prothomalo.com/prothomalo-bangla%2F2021-03%2Fa050d269-5432-47f9-b0ef-a3f8965cf5c7%2Fmedical.jpg?auto=format%2Ccompress&format=webp&w=376&dpr=2.6"
     />
-    <meta property="og:url" content="https://varsity.acsadmission.com" />
     <meta property="og:type" content="EdTech" />
     <meta property="fb:app_id" content="905085926919735" />
-    <script type="module" crossorigin src="/medical22exam/assets/index.7312e4b4.js"></script>
-    <link rel="stylesheet" href="/medical22exam/assets/index.98c043ff.css">
+    <script type="module" crossorigin src="/medical22exam/assets/index.20d3d822.js"></script>
+    <link rel="stylesheet" href="/medical22exam/assets/index.687a74e2.css">
   </head>
   <body>
     <div id="app"></div>
